<resources>
    <string name="app_name">Real Time Notification</string>

    <string name="my_name">Sagar S. Khursale</string>
    <string name="github">https://github.com/sagarkhursale</string>
    <string name="place_auto_complete_api">AIzaSyCRQIpvfeQHo8eN-hxRQOJe_I7r2TU-85Q</string>

    <string name="txt_current_location">Current Location *</string>
    <string name="txt_destination_location">Destination Location *</string>
    <string name="prompt_current_location">e.g. Pune, Maharashtra</string>
    <string name="prompt_destination_location">e.g. Mumbai, Maharashtra</string>
    <string name="title_start">START</string>
    <string name="title_stop">STOP</string>


    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>


    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>


    <!-- Permission Handler strings -->
    <string name="play_services_not_available">"This Device Is Not Supported For GooglePlayServices"</string>


</resources>
